--- a/index.html
+++ b/index.html
@@ -21,5 +21,20 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Meta Pixel dynamic loader (only loads if VITE_FB_PIXEL_ID is set) -->
+    <script type="module">
+      const PIXEL_ID = import.meta.env.VITE_FB_PIXEL_ID;
+      if (PIXEL_ID) {
+        if (!window.fbq) {
+          // Standard Meta Pixel bootstrap
+          !(function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod? n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n; n.push=n; n.loaded=!0; n.version='2.0'; n.queue=[]; t=b.createElement(e); t.async=!0; t.src=v; s=b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t,s);})(window, document,'script','https://connect.facebook.net/en_US/fbevents.js');
+        }
+        window.fbq('init', PIXEL_ID);
+        window.fbq('track', 'PageView');
+        // Expose helper flag
+        window.__PIXEL_ENABLED__ = true;
+      }
+    </script>
+    <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=%VITE_FB_PIXEL_ID%&ev=PageView&noscript=1"/></noscript>
   </body>
 </html>
