--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <title>Your Sugar-Off Switch | French Wellness Reset Kit</title>
     <meta name="description" content="Temporarily reduce sweet taste perception with premium Gymnema Sylvestre mouth strips. Reset sugar cravings, clear your skin, and boost energy in 14 days. Chic French wellness ritual." />
     <meta name="author" content="Taste Reset Kit" />
