--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       gtag('config', 'G-LZCV0J3Q9M');
     </script>
 
-    <!-- Microsoft Clarity -->
+    <!-- Microsoft Clarityy -->
     <script type="text/javascript">
       (function(c,l,a,r,i,t,y){
           c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
