Add analytics dashboard with Vercel KV integration
- Implemented analytics tracking for page views, device types, and country detection.
- Created API endpoints for tracking metrics and fetching analytics stats.
- Added a new Analytics page to display real-time statistics with charts for device and country breakdowns.
- Updated GAReporter to track visits to our analytics system.
- Modified vercel.json to exclude API routes from rewrites.
- Added documentation for setting up and deploying the analytics system.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,20 +14,157 @@
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <title>Your Sugar-Off Switch | French Wellness Reset Kit</title>
-    <meta name="description" content="Temporarily reduce sweet taste perception with premium Gymnema Sylvestre mouth strips. Reset sugar cravings, clear your skin, and boost energy in 14 days. Chic French wellness ritual." />
-    <meta name="author" content="Taste Reset Kit" />
-    <meta name="keywords" content="sugar blocker, gymnema sylvestre, french wellness, mouth strips, sugar cravings, skin health, energy boost, natural supplement" />
+    <title>KILL CRAVE - Spray Anti-Fringales de Sucre | Bloquez vos Envies</title>
+    <meta name="description" content="KILL CRAVE - Spray anti-fringales pour arrêter le sucre et maigrir rapidement. Bloquez vos envies sucrées, perdez du poids, gagnez en énergie. Idéal fitness & musculation. Dès 24,90€." />
+    <meta name="author" content="KILL CRAVE" />
+    <meta name="keywords" content="kill crave, arrêter sucre pour maigrir, spray anti-fringales, coupe faim pour maigrir, perdre du poids sans sucre, arrêter sucre musculation, régime sans sucre, sèche musculation, fitness, ventre plat, bloquer envies sucre, spray naturel, gymnema sylvestre, perte de poids rapide" />
+    <link rel="canonical" href="https://kill-crave.com" />
 
-    <meta property="og:title" content="Your Sugar-Off Switch | French Wellness Reset Kit" />
-    <meta property="og:description" content="Temporarily reduce sweet taste perception with premium Gymnema Sylvestre mouth strips. Reset sugar cravings, clear your skin, and boost energy in 14 days." />
+    <meta property="og:title" content="KILL CRAVE - Spray Anti-Fringales de Sucre" />
+    <meta property="og:description" content="Spray anti-fringales pour arrêter le sucre et maigrir rapidement. Bloquez vos envies sucrées, perdez du poids, gagnez en énergie. Idéal fitness & musculation. Dès 24,90€." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://kill-crave.com" />
+    <meta property="og:image" content="https://kill-crave.com/images/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="KILL CRAVE - Spray Anti-Fringales de Sucre" />
+    <meta name="twitter:description" content="Spray anti-fringales pour arrêter le sucre et maigrir rapidement. Bloquez vos envies sucrées, perdez du poids, gagnez en énergie. Idéal fitness & musculation. Dès 24,90€." />
+    <meta name="twitter:image" content="https://kill-crave.com/images/logo.png" />
 
+    <!-- JSON-LD Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "KILL CRAVE",
+      "url": "https://kill-crave.com",
+      "logo": "https://kill-crave.com/images/logo.png",
+      "description": "Spray anti-fringales naturel qui bloque instantanément les envies de sucre",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "Customer Service",
+        "availableLanguage": ["French"]
+      },
+      "sameAs": []
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Product",
+      "name": "KILL CRAVE - Spray Anti-Fringales de Sucre",
+      "image": "https://kill-crave.com/images/logo.png",
+      "description": "Spray anti-fringales pour arrêter le sucre et maigrir rapidement. Bloquez instantanément vos envies sucrées et perdez du poids efficacement. Formule naturelle à base de Gymnema Sylvestre. Idéal pour la musculation, le fitness et la sèche. Retrouvez énergie et contrôle total.",
+      "brand": {
+        "@type": "Brand",
+        "name": "KILL CRAVE"
+      },
+      "offers": [
+        {
+          "@type": "Offer",
+          "name": "1 Spray - 30 Jours",
+          "price": "24.90",
+          "priceCurrency": "EUR",
+          "availability": "https://schema.org/InStock",
+          "url": "https://kill-crave.com",
+          "priceValidUntil": "2025-12-31",
+          "itemCondition": "https://schema.org/NewCondition"
+        },
+        {
+          "@type": "Offer",
+          "name": "2 Sprays + 1 Offert - 90 Jours",
+          "price": "49.80",
+          "priceCurrency": "EUR",
+          "availability": "https://schema.org/InStock",
+          "url": "https://kill-crave.com",
+          "priceValidUntil": "2025-12-31",
+          "itemCondition": "https://schema.org/NewCondition"
+        }
+      ],
+      "category": "Compléments Alimentaires",
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "reviewCount": "127"
+      }
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "KILL CRAVE",
+      "url": "https://kill-crave.com",
+      "description": "Spray anti-fringales qui bloque instantanément vos envies de sucre",
+      "publisher": {
+        "@type": "Organization",
+        "name": "KILL CRAVE",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://kill-crave.com/images/logo.png"
+        }
+      }
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "Comment KILL CRAVE aide-t-il à maigrir ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "KILL CRAVE bloque instantanément vos envies de sucre grâce au Gymnema Sylvestre. En éliminant les fringales sucrées, vous réduisez naturellement votre apport calorique et perdez du poids plus rapidement. Idéal pour accompagner un régime ou une sèche."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Peut-on utiliser KILL CRAVE en musculation ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Absolument ! KILL CRAVE est très populaire chez les pratiquants de musculation et fitness. Il aide à contrôler les envies de sucre pendant une phase de sèche, permettant de maintenir un déficit calorique sans céder aux fringales. Parfait pour obtenir un corps sec et dessiné."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Combien de temps faut-il pour voir des résultats sur la perte de poids ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Les utilisateurs constatent généralement une réduction significative des fringales dès les premiers jours. Pour la perte de poids visible, comptez 2 à 4 semaines en combinant KILL CRAVE avec une alimentation équilibrée. Beaucoup perdent 2 à 5 kg le premier mois."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "KILL CRAVE est-il naturel et sans danger ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Oui, KILL CRAVE contient du Gymnema Sylvestre, une plante utilisée depuis des siècles en médecine ayurvédique. La formule est 100% naturelle, sans stimulants, sans accoutumance et sans effets secondaires. Convient aux sportifs et personnes actives."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Comment utiliser KILL CRAVE pour perdre du ventre ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Utilisez KILL CRAVE avant les moments de fringales (après-midi, soirée). Le spray bloque les envies de sucre qui causent le stockage de graisse abdominale. Associé à une activité physique régulière, il facilite grandement la perte de graisse du ventre."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Quelle est la différence entre KILL CRAVE et un coupe-faim classique ?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "KILL CRAVE ne coupe pas la faim globale, il cible spécifiquement les envies de sucre. Contrairement aux coupe-faim stimulants, il agit directement sur les papilles gustatives pour rendre le sucre moins attractif. Résultat : vous mangez normalement mais sans les fringales sucrées qui font grossir."
+          }
+        }
+      ]
+    }
+    </script>
 
     <!-- Microsoft Clarityy -->
     <script type="text/javascript">
